<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android = "http://schemas.android.com/apk/res/android"
    xmlns:app = "http://schemas.android.com/apk/res-auto"
    xmlns:tools = "http://schemas.android.com/tools"
    android:layout_width = "match_parent"
    android:layout_height = "match_parent"
    android:orientation = "vertical"
    tools:context = ".MainActivity"
    >

    <android.support.v7.widget.Toolbar
        android:id = "@+id/main_toolbar"
        android:layout_width = "match_parent"
        android:layout_height="?android:attr/actionBarSize"
        style="@style/ToolbarStyle"
        app:title = "@string/app_name"
        />

    <android.support.v7.widget.RecyclerView
        android:id = "@+id/main_recycler_view"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:layout_gravity="fill"
        />
</LinearLayout>